--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
                    Hi, my name is Jason Tan, a final year student, currently pursuing Bachelor'sDegree in Computer Science, majoring in Itelligent System in University of Science, Malaysia. I've been to a 6 months internship in a software house company Caritech Sdn. Bhd.
                   </p>
                 </div>
+                <p class="title-s">Skill</p>
+                  <span>HTML</span> <span class="pull-right">85%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
               </div>
             </div>
           </div>
